# algebra

./: Cargo.toml
.github/workflows/: ci.yml
ec/: Cargo.toml
ec-boundary-patch/: Cargo.toml
ec-boundary-patch/src/: lib.rs
ec-native/: Cargo.toml
ec-native/src/: lib.rs  serialize.rs
ec-native/src/ark_ec/models/: short_weierstrass_jacobian.rs
ec-native/src/ark_ec/models/bls12/: g2.rs  mod.rs
ec-native/src/ark_ec/models/bn/: g1.rs  g2.rs
ec-native/src/ark_ec/models/bw6/: g2.rs  mod.rs
ec-native/src/ark_ec/models/mnt4/: g1.rs  mod.rs
ec-native/src/ark_ec/models/mnt6/: g2.rs  mod.rs
ec-native/src/ark_ec/msm/: fixed_base.rs
ec-native/src/boundary/: dummy.rs  handler.rs
ec-native/src/curves/: mod.rs
ec-native/src/curves/bls12_377/: mod.rs
ec-native/src/curves/bls12_377/curves/: g1.rs  g2.rs  mod.rs
ec-native/src/curves/ed_on_bls12_377/curves/: mod.rs
ec-native/src/curves/ed_on_bls12_377/fields/: fq.rs
ec-native/src/curves/mnt4_298/curves/: g1.rs  g2.rs
ec-native/src/msm/: fixed_base.rs  variable_base.rs
ec-native/src/wrapped/: mod.rs
ec-patch/: Cargo.toml
ec-patch-example/: Cargo.toml
ec-patch-example/src/: main.rs
ec-patch/src/: lib.rs
ec/src/: lib.rs
ec/src/boundary/: mod.rs  serialize.rs
ec/src/models/: mod.rs  short_weierstrass_jacobian.rs  twisted_edwards_extended.rs  wrapped.rs
ec/src/models/wrapped/: README.md  boundary.rs  mod.rs  serialize.rs  short_weierstrass_jacobian.rs  twisted_edwards_extended.rs
native-boundary/: Cargo.toml  README.md
native-boundary/src/: boundary.rs  curves.rs  lib.rs  serialize.rs
native-boundary/src/ark_ec/: mod.rs  wnaf.rs
native-boundary/src/ark_ec/models/: twisted_edwards_extended.rs
native-boundary/src/ark_ec/models/bls12/: g1.rs
native-boundary/src/ark_ec/models/bn/: mod.rs
native-boundary/src/ark_ec/models/bw6/: g1.rs
native-boundary/src/ark_ec/models/mnt4/: g2.rs
native-boundary/src/ark_ec/models/mnt6/: g1.rs
native-boundary/src/ark_ec/msm/: variable_base.rs
native-boundary/src/boundary/: dummy.rs  handler.rs  interface.rs  mod.rs
native-boundary/src/curve_param/: mod.rs
native-boundary/src/curve_param/bls12_377/curves/: g1.rs  g2.rs  mod.rs
native-boundary/src/curve_param/bls12_377/fields/: fr.rs  mod.rs
native-boundary/src/curve_param/ed_on_bls12_377/: mod.rs
native-boundary/src/curve_param/ed_on_bls12_377/curves/: mod.rs
native-boundary/src/curve_param/ed_on_bls12_377/fields/: fq.rs
native-boundary/src/curve_param/mnt4_298/: mod.rs
native-boundary/src/curve_param/mnt4_298/curves/: g1.rs  g2.rs  mod.rs
native-boundary/src/curve_param/mnt4_298/fields/: fq2.rs  fq4.rs  mod.rs
native-boundary/src/curves/: mod.rs
native-boundary/src/curves/bls12_377/curves/: g1.rs  g2.rs  mod.rs
native-boundary/src/curves/ed_on_bls12_377/curves/: mod.rs
native-boundary/src/curves/mnt4_298/curves/: g1.rs  g2.rs  mod.rs
native-boundary/src/curves/mnt4_298/fields/: fq2.rs  fq4.rs
native-boundary/src/curves/pallas/: mod.rs
native-boundary/src/curves/pallas/curves/: mod.rs
native-boundary/src/msm/: fixed_base.rs  variable_base.rs
native-boundary/src/wrapped/: macros.rs  mod.rs  serialize.rs  short_weierstrass_jacobian.rs  twisted_edwards_extended.rs
test-wrappers/: Cargo.toml
test-wrappers/src/: lib.rs
test-wrappers/src/mnt4/: mnt4_298.rs  mod.rs
test-wrappers/src/short_weierstrass_jacobian/: mod.rs  pallas.rs
test-wrappers/src/twisted_edwards_extended/: ed_on_bls12_377.rs  mod.rs
