[workspace]

members = [
    "serialize",
    "serialize-derive",

    "ff-macros",
    "ff-asm",
    "ff",

    "ec",

    "poly",
    "poly-benches",
    "test-curves",
    "test-templates",

    "native-boundary",
    "test-wrappers"
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true


# force transitive dependencies to use local crates
[patch.crates-io]
ark-ec = {version = "^0.3.0", path = "ec", default-features = false}
ark-ff = {version = "^0.3.0", path = "ff", default-features = false}