[workspace]

members = [
    "serialize",
    "serialize-derive",

    "ff-macros",
    "ff-asm",
    "ff",

    "ec",

    "poly",
    "poly-benches",
    "test-curves",
    "test-templates",

    "native-boundary",
    "test-wrappers"
]

[profile.release]
incremental = true
lto = "thin"
opt-level = 3
panic = 'abort'

[profile.bench]
debug = false
debug-assertions = false
incremental = true
lto = "thin"
opt-level = 3
rpath = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
debug = true


# force transitive dependencies to use local crates
[patch.crates-io]
ark-ec = {version = "^0.3.0", path = "ec", default-features = false}
ark-ff = {version = "^0.3.0", path = "ff", default-features = false}
