[workspace]

members = [
  "native-boundary",
  "test-wrappers",
  "ec-patch",
]

[profile.release]
incremental = true
lto = "thin"
opt-level = 3
panic = 'abort'

[profile.bench]
debug = false
debug-assertions = false
incremental = true
lto = "thin"
opt-level = 3
rpath = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
debug = true
debug-assertions = true
incremental = true
lto = "thin"
opt-level = 3

# force transitive dependencies to use local crates
[patch.crates-io]
# ark-ec = {package = "ec-patch", version = "^0.3.0", path = "ec-patch", default-features = false}
ark-ec = {package = "ark-ec", version = "^0.3.0", git = "https://github.com/ashutoshvarma/algebra/", rev = "3b589fe", default-features = false}
ark-ff = {package = "ark-ff", version = "^0.3.0", git = "https://github.com/ashutoshvarma/algebra/", rev = "3b589fe", default-features = false}
ark-serialize = {package = "ark-serialize", version = "^0.3.0", git = "https://github.com/ashutoshvarma/algebra/", rev = "3b589fe", default-features = false}
