[package]
authors = ["Ashutosh Varma <ashutoshvarma11@live.com>"]
edition = "2018"
name = "ark-ec-patch"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ark-ec-orig = {package = "ark-ec", version = "^0.3.0", default-features = false}
ark-ec-orig = {package = "ark-ec", git = "https://github.com/arkworks-rs/algebra", tag = "v0.3.0", default-features = false}
ark-mnt4-298 = {version = "^0.3.0"}
# ark-mnt4-298 = {package = "ark-mnt4-298", git = " https://github.com/ashutoshvarma/curves/", branch = "wasm", default-features = false}
ark-std = {version = "^0.3.0", default-features = false}

[features]
default = []
parallel = ["ark-ec-orig/parallel", "ark-std/parallel"]
std = ["ark-ec-orig/std", "ark-std/std"]

# [patch.crates-io]
# ark-mnt4-298 = {package = "ark-mnt4-298", git = " https://github.com/ashutoshvarma/curves/", branch = "wasm", default-features = false}
# ark-ec = {package = "ark-ec", git = "https://github.com/arkworks-rs/algebra", tag = "v0.3.0", default-features = false}
# ark-ff = {package = "ark-ff", git = "https://github.com/arkworks-rs/algebra", tag = "v0.3.0", default-features = false}
# ark-serialize = {package = "ark-serialize", git = "https://github.com/arkworks-rs/algebra", tag = "v0.3.0", default-features = false}
