[package]
authors = ["Ashutosh Varma <ashutoshvarma11@live.com>"]
edition = "2018"
name = "ark-ec"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", path = "../serialize", default-features = false }
ark-ff = {version = "^0.3.0", path = "../ff", default-features = false}
num-traits = {version = "0.2", default-features = false}
zeroize = {version = "1", default-features = false, features = ["zeroize_derive"]}
crossbeam-utils = {version = "0.8.5", default-features = false}
derive_more = "0.99.13"
rayon = { version = "1", optional = true }
derivative = { version = "2", features = ["use_core"] }
num_enum = "0.5.1"

[dev-dependencies]
ark-ed-on-bls12-377 = {version = "^0.3.0"}
ark-bls12-377 = {version = "^0.3.0"}
ark-mnt4-298 = {version = "^0.3.0"}
ark-pallas = {version = "^0.3.0"}

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-serialize/std" ]
parallel = [ "std", "rayon", "ark-std/parallel" ]
