[package]
authors = ["Ashutosh Varma <ashutoshvarma11@live.com>"]
edition = "2018"
name = "ec-patch-example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-mnt4-298 = {version = "^0.3.0"}
num-traits = { version = "0.2", default-features = false }


[patch.crates-io]
ark-ec = {package = "ark-ec-patch", version = "^0.3.0", path = "../ec-boundary-patch", default-features = false}
# ark-ec = {package = "ark-ff", git = "https://github.com/arkworks-rs/algebra", tag = "v0.3.0", default-features = false}
ark-ff = {package = "ark-ff", git = "https://github.com/arkworks-rs/algebra", tag = "v0.3.0", default-features = false}
ark-serialize = {package = "ark-serialize", git = "https://github.com/arkworks-rs/algebra", tag = "v0.3.0", default-features = false}
