[package]
authors = ["Ashutosh Varma <ashutoshvarma11@live.com>"]
edition = "2018"
name = "ec-patch"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec-orig = {package = "ark-ec", version = "^0.3.0", git = "https://github.com/ashutoshvarma/algebra/", rev = "3b589fe", default-features = false}
ark-native-boundary = {version = "^0.3.0", path = "../native-boundary", default-features = false}
