[package]
authors = ["Ashutosh Varma <ashutoshvarma11@live.com>"]
edition = "2018"
name = "ark-native-boundary"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = {version = "^0.2.0", path = "../ec", default-features = false}
ark-ff = {version = "^0.2.0", path = "../ff", default-features = false}
ark-serialize = {version = "^0.2.0", path = "../serialize", default-features = false}
ark-std = {version = "0.2.0", default-features = false}
crossbeam-utils = {version = "0.8.5", default-features = false}
derive_more = "0.99.13"
num-traits = {version = "0.2", default-features = false}
num_enum = "0.5.1"
zeroize = {version = "1", default-features = false, features = ["zeroize_derive"]}

# curves
ark-ed-on-bls12-377 = {version = "^0.2.0"}
ark-mnt4-298 = {version = "^0.2.0"}
ark-pallas = {version = "^0.2.0"}
