[package]
authors = ["Ashutosh Varma <ashutoshvarma11@live.com>"]
edition = "2018"
name = "ark-native-boundary"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "^0.3.0", default-features = false }
# ark-serialize = { version = "^0.3.0", default-features = false }
# ark-ff = {version = "^0.3.0", default-features = false}
# ark-ec = {version = "^0.3.0", default-features = false}
ark-ff = {package = "ark-ff", version = "^0.3.0", git = "https://github.com/ashutoshvarma/algebra/", rev = "3b589fe", default-features = false }
ark-serialize = {package = "ark-serialize", version = "^0.3.0", git = "https://github.com/ashutoshvarma/algebra/", rev = "3b589fe", default-features = false }
ark-ec = {package = "ark-ec", version = "^0.3.0", git = "https://github.com/ashutoshvarma/algebra/", rev = "3b589fe", default-features = false }
num-traits = {version = "0.2", default-features = false}
zeroize = {version = "1", default-features = false, features = ["zeroize_derive"]}
crossbeam-utils = {version = "0.8.5", default-features = false}
derive_more = "0.99.13"
num_enum = "0.5.1"
# curves
ark-ed-on-bls12-377 = {version = "^0.3.0"}
ark-mnt4-298 = {version = "^0.3.0"}
ark-pallas = {version = "^0.3.0"}
