[package]
name = "native-boundary"
version = "0.1.0"
authors = ["Ashutosh Varma <ashutoshvarma11@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "^0.3.0", default-features = false }
num_enum = "0.5.1"
