[package]
authors = ["arkworks contributors"]
description = "A library for testing ark-ec wrappers types"
homepage = "https://arkworks.rs"
name = "ark-test-wrappers"
repository = "https://github.com/arkworks-rs/algebra"
version = "0.1.0"
# documentation = "https://docs.rs/ark-test-curves/"
categories = ["cryptography"]
edition = "2018"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
keywords = ["cryptography", "wrappers"]
license = "MIT/Apache-2.0"

# [dependencies]

[dev-dependencies]
ark-algebra-test-templates = {version = "^0.3.0", path = "../test-templates", default-features = false}
ark-native-boundary = {version = "^0.3.0", path = "../native-boundary", default-features = false}
ark-ed-on-bls12-377 = {version = "^0.3.0"}
ark-ec = {version = "^0.3.0", path = "../ec", default-features = false}
ark-ff = {version = "^0.3.0", path = "../ff", default-features = false}
ark-mnt4-298 = {version = "^0.3.0"}
ark-pallas = {version = "^0.3.0"}
ark-serialize = {version = "^0.3.0", path = "../serialize", default-features = false}
ark-std = {version = "^0.3.0", default-features = false}
